--- a/templates/reportes/contables/cuentas.html
+++ b/templates/reportes/contables/cuentas.html
@@ -205,12 +205,11 @@ var tabla = $('#dtCuentas').DataTable({
                     return 0
                 }
             };            
-            pageTotal = api.column(2, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(2).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));                       
-             pageTotal = api.column(3, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(3).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));   
-             pageTotal = api.column(4, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
-            $( api.column(4).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));   
+            let col_tot_sum =[2, 3, 4]
+            col_tot_sum.forEach(function (col_number) {
+                pageTotal = api.column(col_number, { page: 'current'} ).data().reduce( function (a, b) {return floatVal(a) + floatVal(b);}, 0 );
+                $( api.column(col_number).footer() ).html('$'+pageTotal.toLocaleString(undefined,{minimumFractionDigits:2}));
+            });
         }
         });
 
