--- a/templates/reportes/varios/comisiones_vendedores.html
+++ b/templates/reportes/varios/comisiones_vendedores.html
@@ -50,8 +50,32 @@
                                     <td class="text-center">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>                              
                                     <td class="listado_estado {{cpb.estado.color}}">{{cpb.estado.nombre}}</td>
                                     <td class="text-center">{{cpb.fecha_vto|date:'d/m/Y'}}</td>
-                                    <td>{% include "general/varios/cpb_ver.html" %}{{ cpb}}</td> 
-                                    <td>{% include "entidades/entidad_ver.html" %}</td>
+                                    <td>
+                                        <a
+                                            {% if cpb.cpb_tipo.tipo == 4 or cpb.cpb_tipo.tipo == 7 %}
+                                                href="{% url 'recibo_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 2 or cpb.cpb_tipo.tipo == 3 %}
+                                                href="{% url 'ncredndeb_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 5 %}
+                                                href="{% url 'remito_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 6 %}
+                                                href="{% url 'presup_ver' id=cpb.id %}"
+                                            {% elif c.tipo.tipo == 8 %}
+                                                href="{% url 'movim_ver' id=c.cpb_id %}"
+                                            {% else %}
+                                                href="{% url 'comprobante_ver' id=cpb.id %}"
+                                            {% endif %}
+                                            title="Ver Detalle" class="modal-detail" data-modal-head="DETALLE {{cpb.cpb_tipo.nombre|upper}} {{cpb.get_cpb}} - Fecha:{{cpb.fecha_cpb|date:'d/m/Y'}} - Vencimiento:{{cpb.fecha_vto|date:'d/m/Y'}}" data-modal-callback="reload">
+                                            <i class="fa fa-list-alt text-primary"></i>
+                                        </a>
+                                        {{cpb}}
+                                    </td>
+                                    <td>
+                                        <a href="{% url 'entidad_ver' id=cpb.entidad.id %}"  title="{{ cpb.entidad.detalle_entidad}}" class="modal-detail"
+                                           data-modal-head="DETALLE {{cpb.entidad.get_tipo_entidad_display|upper}} {{cpb.entidad.codigo}}" data-modal-callback="reload">
+                                            <strong>{{ cpb.entidad.detalle_entidad|truncatechars:60 }}</strong>
+                                        </a>
+                                    </td>
                                     <td class="importe">${{cpb.total|default_if_none:0|floatformat:2}}</td> 
                                     <td class="importe">${{cpb.comision|default_if_none:0|floatformat:2}}</td>
                                 </tr>
