--- a/templates/reportes/varios/vencimientos_cpbs.html
+++ b/templates/reportes/varios/vencimientos_cpbs.html
@@ -70,9 +70,33 @@
                                     <td class="text-center">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>                              
                                     <td class="listado_estado {{cpb.estado.color}}">{{cpb.estado.nombre}}</td>
                                     <td class="text-center">{{cpb.fecha_vto|date:'d/m/Y'}}</td>                                                                 
-                                    <td>{% include "general/varios/cpb_ver.html" %}{{ cpb}}</td> 
+                                    <td>
+                                        <a
+                                            {% if cpb.cpb_tipo.tipo == 4 or cpb.cpb_tipo.tipo == 7 %}
+                                                href="{% url 'recibo_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 2 or cpb.cpb_tipo.tipo == 3 %}
+                                                href="{% url 'ncredndeb_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 5 %}
+                                                href="{% url 'remito_ver' id=cpb.id %}"
+                                            {% elif cpb.cpb_tipo.tipo == 6 %}
+                                                href="{% url 'presup_ver' id=cpb.id %}"
+                                            {% elif c.tipo.tipo == 8 %}
+                                                href="{% url 'movim_ver' id=c.cpb_id %}"
+                                            {% else %}
+                                                href="{% url 'comprobante_ver' id=cpb.id %}"
+                                            {% endif %}
+
+                                            title="Ver Detalle" class="modal-detail" data-modal-head="DETALLE {{cpb.cpb_tipo.nombre|upper}} {{cpb.get_cpb}} - Fecha:{{cpb.fecha_cpb|date:'d/m/Y'}} - Vencimiento:{{cpb.fecha_vto|date:'d/m/Y'}}" data-modal-callback="reload">
+                                            <i class="fa fa-list-alt text-primary"></i>
+                                        </a>
+                                        {{ cpb }}
+                                    </td>
                                     <td class="text-center" title="{{ cpb.cpb_tipo.nombre|default_if_none:'' }}">{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</td>
-                                    <td>{% include "entidades/entidad_ver.html" %}</td>
+                                    <td>
+                                        <a href="{% url 'entidad_ver' id=cpb.entidad.id %}"  title="{{ cpb.entidad.detalle_entidad}}" class="modal-detail"
+                                           data-modal-head="DETALLE {{cpb.entidad.get_tipo_entidad_display|upper}} {{cpb.entidad.codigo}}" data-modal-callback="reload">
+                                            <strong>{{ cpb.entidad.detalle_entidad|truncatechars:60 }}</strong></a>
+                                    </td>
                                     <td class="importe">${{cpb.get_importe_total|default_if_none:0|floatformat:2}}</td> 
                                     <td {% if cpb.cae %}title="Vencimiento CAE: {{cpb.cae_vto|date:'d/m/Y'}}" class="listado_estado success"{% endif %}>{{ cpb.cae|default_if_none:'' }}</td>
                                     <td title="{{ cpb.observacion}} {{ cpb.seguimiento|default_if_none:''}}">{{ cpb.observacion|default_if_none:''|truncatechars:40 }}{% if cpb.seguimiento %} - {{ cpb.seguimiento|default_if_none:''|truncatechars:40 }} {% endif %}</td>                                    
