--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -141,8 +141,13 @@
 															<div class="row cerca">
 																<div class="col-sm-12">{% bootstrap_field form.codbar_detalle  %}</div>
 															</div>
+
 														</div>
 													</div>
+                                                        <div class="row cerca">
+																<label class="control-label col-sm-4">Contenido del QR:</label>
+                                                                <div class="col-sm-8">{% bootstrap_field form.codbar_tipo show_label=False  %}</div>
+                                                        </div>
 														<div class="row cerca">
 																<label class="control-label col-sm-4">Nombre Impuesto 1:</label>
 																<div class="col-sm-8">{% bootstrap_field form.nombre_impuesto1 show_label=False  %}</div>		
