--- a/templates/ingresos/ventas/cpb_venta_listado.html
+++ b/templates/ingresos/ventas/cpb_venta_listado.html
@@ -169,7 +169,10 @@
                                     <td class="text-center" title="Fecha Creación: {{cpb.fecha_creacion|date:'d/m/Y H:i'}}">{{cpb.fecha_cpb|date:'d/m/Y'}}</td>
                                     <td class="text-center" title="{{ cpb.cpb_tipo|default_if_none:'' }}">{{ cpb.cpb_tipo.codigo|default_if_none:'' }}</td>
                                     <td>{{cpb}}</td>                                
-                                    <td  title="{{ cpb.entidad}}" >{% include "entidades/cliente_ver.html" %}</td>                               
+                                    <td  title="{{ cpb.entidad}}" >
+                                        <a href="{% url 'cliente_ver' id=cpb.entidad.id %}"  title="{{ cpb.detalle_entidad}}" class="modal-detail" data-modal-head="DETALLE CLIENTE {{cpb.entidad.codigo}}" data-modal-callback="reload">
+	                                        <strong>{{ cpb.entidad|truncatechars:60 }}</strong></a>
+                                    </td>
                                     <td class="importe">${{cpb.get_saldo|default_if_none:0|floatformat:2}}</td>                                
                                     <td class="importe">${{cpb.get_importe_total|default_if_none:0}}</td> 
                                     <td class="importe">${{cpb.get_importe_subtotal|default_if_none:0|floatformat:2}}<input class="hidden" value="{{ item.importe_total }}" id="importe_chk_{{forloop.counter0}}"/></td> 
