--- a/templates/productos/detalle_producto_qr.html
+++ b/templates/productos/detalle_producto_qr.html
@@ -32,6 +32,7 @@
                 <tr>
                   <td>Categoría:</td><td><strong>{{producto.categoria|default_if_none:'' }}</strong></td>
                 </tr>
+                {% if is_logged %}
                 <tr>
                   <td>Tipo Producto:</td><td><strong>{{producto.get_tipo_producto_display|default_if_none:'' }}</strong></td>
                 </tr>
@@ -47,10 +48,12 @@
                 <tr>
                   <td>Descripción:</td><td><strong>{{producto.descripcion|default_if_none:'' }}</strong></td>
                 </tr>
+               {% endif %}
               </tbody>
             </table>
             </div>
         </div>
+        {% if is_logged %}
         <div class="row">
             <div class="col-xs-12 col-sm-5">
                 <div class="titulo_detalle">Detalle Stock Disponible</div>
@@ -58,7 +61,7 @@
                   <thead>
                     <tr>
                       <th class="text-center">Ubicación</th>
-                      {% if is_logged %}<th class="text-right">P.Pedido</th>{% endif %}
+                      <th class="text-right">P.Pedido</th>
                       <th class="text-right">Stock</th>
                       <th class="text-left">Unidad</th>
                     </tr>
@@ -67,7 +70,7 @@
                     {% for ps in prod_stock %}
                       <tr>
                         <td class="text-center texto_detalle">{{ ps.ubicacion}}</td>
-                        {% if is_logged %}<td class="importe texto_detalle">{{ps.punto_pedido|default_if_none:0|floatformat:2}}</td>{% endif %}
+                        <td class="importe texto_detalle">{{ps.punto_pedido|default_if_none:0|floatformat:2}}</td>
                         <td class="importe_total texto_detalle">{{ps.get_stock|default_if_none:0|floatformat:2}}</td>
                         <td class="text-left texto_detalle">[{{ps.producto.get_unidad_display|default_if_none:''}}]</td>
                       </tr>
@@ -75,7 +78,7 @@
                   </tbody>
                 </table>
             </div>
-
+            {% endif %}
             <div class="col-xs-12 col-sm-7">
                 <div class="titulo_detalle">Detalle Precios</div>
                 <table id="dataTables-cpb_venta" class="table table-striped  table-hover table-no-bordered tabla_nueva nowrap ">
