Agregado campo de tamaño de QR y por defecto toma 70mm

--- a/templates/general/empresas/empresa_form.html
+++ b/templates/general/empresas/empresa_form.html
@@ -146,7 +146,12 @@
 													</div>
                                                         <div class="row cerca">
 																<label class="control-label col-sm-4">Contenido del QR:</label>
-                                                                <div class="col-sm-8">{% bootstrap_field form.codbar_tipo show_label=False  %}</div>
+                                                                <div class="col-sm-3">{% bootstrap_field form.codbar_tipo show_label=False  %}</div>
+                                                                <label class="control-label col-sm-4">Tamaño del QR (mm):</label>
+                                                                <div class="col-sm-1">{% bootstrap_field form.qr_size show_label=False  %}</div>
+                                                        </div>
+                                                       <div class="row cerca">
+
                                                         </div>
 														<div class="row cerca">
 																<label class="control-label col-sm-4">Nombre Impuesto 1:</label>
