--- a/templates/productos/precios_qrs.html
+++ b/templates/productos/precios_qrs.html
@@ -34,7 +34,7 @@
            <tr>
           {% endif %}
           <td align="center" class="" width="100">
-            <img src="data:image/png;base64,{{c.codbar}}" alt="qrcode" width="100%" height="40"  >
+            <img src="data:image/png;base64,{{c.codbar}}" alt="qrcode" width="100%" height= {{ qr_size }}>
                 {% if mostrar_detalle %}<br><span class="pie_sistema">{{c.detalle}}</span>{% endif %}
                 {% if mostrar_precio %}<br>${{c.precio}}{% endif %}
           </td>
